editor: important editor refactor to allow only one instance of monaco editor